2010-07-12  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.h, modules/pandora_module_factory.cc,
	  modules/pandora_module.cc, pandora_windows_service.cc: Added the
	  module_cron feature to schedule modules using a cron-like syntax and
	  some small fixes.

2010-07-06  Ramon Novoa  <rnovoa@artica.es>

	* pandora_windows_service.cc: Fixed the autotime feature. Was not
	  working since tinyXML was removed.

2010-07-05  Raul Mateos  <raulfopandora@gmail.com>

	* bin/pandora_agent.conf: Added example of D Drive. Added comments
	to some modules. Added lost module_begin. Improved command.

2010-07-02  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.h, modules/pandora_module_factory.cc,
	  modules/pandora_module.cc, pandora_windows_service.cc: Added the
	  module_condition feature. See http://openideas.info/wiki/ for more
	  information.

2010-06-30  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc: getDiskFreeSpacePercent should not return
	  any value if the drive does not exist. Fixed.

	* modules/pandora_module.h, modules/pandora_module_factory.cc,
	  modules/pandora_module.cc, pandora_windows_service.cc: Added support
	  for saving the value of a module as an environment variable. 

2010-06-13  Sancho Lerena <slerena@artica.es>

	* bin/util/logevent_log4x.vbs: Fixed a small undefinition who
	makes script not working on summer time.

2010-06-08  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc, modules/pandora_module_logevent.cc: Removed
	  unnecessary log information.

2010-05-27  Raul Mateos  <raulofpandora@gmail.com>

	* bin/pandora_agent.conf: Added some example. Changed
	description for Disk Free (added %). Updated build.

2010-05-19  Ramon Novoa  <rnovoa@artica.es>

	* pandora_strutils.h, modules/pandora_module_odbc.h,
	  modules/pandora_data.h, build.sh, pandora.h,
	  udp_server/udp_server.h, Makefile.am: Small fixes so the agent
	  builds under newer versions of MinGW.
	
	* installer/pandora.mpi: Updated build.
