@@ -1,3 +1,8 @@
+2010-07-13  Dario Rodriguez  <dario.rodriguez@artica.es>
+
+	* pandora_agent_conf.cc: Added support to parse collections
+	* pandora_agent_conf.h: Added support to parse collections
+
 2010-07-12  Ramon Novoa  <rnovoa@artica.es>
 
 	* modules/pandora_module.h, modules/pandora_module_factory.cc,
